styles/scoreDisplayPage4.css
.center {
  margin-left: auto;
  margin-right: auto;
}

.button {
  display: block;
  width: 100%;
  text-align: center;
}

.info {
  height: 50%;
}

.inputs {
  height: auto;
  border: none;
}

.inputs td {
  border:  10px solid #24292E;
}

.gameInfo {
  background-color: transparent;
  display: flex;
  justify-content: center;
  flex: 1;
  align-content: center;
  flex-direction: row;
  flex-wrap: wrap;
}

.double {
  background-color: red
}

.triple {
  background-color: green
}

  html, body {
    width: 100%;
    height: 100%;
    margin: 0;
    overflow-x: hidden; /* Prevent horizontal scrolling */
    overflow-y: hidden;
    touch-action: manipulation;
    background-color: #24292E;
  }

  div {
    justify-content: center;
    align-items: center;
  }

.profile {
  border-radius: 50%;
  width: 10vw;
  height: 10vw;
  flex: 0 0 auto;
  object-fit: cover;
}

  table {
    width: 100%;
    margin: 0;
    background-color: #fff;
    border-collapse: collapse;
  }



  p.overall {
    font-weight: bold;
    font-size: 6vw;
    transform: scale(1.5);
    margin-left: auto;
    color: white;
  }

  p.scoreText {
    font-size: 2.5vh;
  }


  td {
    text-align: center;
  }


  .infoCell {
    font-size: 5vw;
    background-color: #efefef;
    height: 9vw;
    border-collapse: separate;
    border-right: 10px solid #24292E;
  }

  .scoreCell {
    min-width: 5vw;
    max-width: 5vw;
    font-size: 5vw;
    background-color: #3C4045;
    color: white;
  }

  .bigCell {
    color: black;
    background-color: #FDFDFD;
    width: 25vw;
    border-left: 30px solid #24292E;
    border-right: none;
  }

  .name {
    color: white;
    font-size: 6vw;
    background-color: transparent;
    margin-left: 3vw;
  }

  .button {
    display: block;
    width: 100%; /* Set width to 100% */
    height: 100%; /* Set height to auto */
    padding: 20px;
    text-align: center;
    color: black;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    font-size: 6vw;
  }

  .overallCell {
    margin-left: auto;
  }

  .button:hover,
  .button:active,
  .button:focus {
    background-color: darkgray;
  }

  #tableWrapper {
    margin: 5%;
    margin-top: 3%;
    display: flex;
    align-items: center;
    flex-direction: column;
    justify-content: flex-start;
  }

  .playerDiv {
    width: 85vw;
    flex: content;
    padding: 2%;
  }

  #infoContainer {
    display:flex;
    flex-direction: column;
    align-items: center;
    flex: 1;
  }

  #doubleButton, #tripleButton {
    background-color: #D3D4D5;
  }

  #input_25 {
    background-color: #FAFF1B;
  }

  #helpCell {
    background-color: transparent;
    font-size: 6vw;
    vertical-align: middle;
    color: yellow;
    flex: 1;
  }
.topRow {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  margin-top: -5%;
}

.roundWins{
  color: gray;
  font-size: 5vw;
  background-color: transparent;
  margin-left: 6vw;
  margin-top: 4rem;
} 

#helpCell {
  font-size: 5.5rem;
}
  /* .numInput:active:hover{
  } */

